--- a/index.css
+++ b/index.css
@@ -2,18 +2,19 @@
     padding: 0;
     margin: 0;
 }
-html,body{
+html{
     height: 100%;
-    width: 100%;
 }
+
 .wrap{
     width: 100%;
-    height: 100%;
+    padding-bottom: 60px;
     position: relative;
 }
 .background{
     width: 100%;
-    height: 100%;
+    /* vh是视窗高度，1vh=视窗高度的1% */
+    height: 100vh;
     background-color: #cc0000;
     display: flex;
     flex-direction: row;
@@ -33,7 +34,6 @@ html,body{
     transition: opacity 1s;
     opacity: 0;
 }
-
 a{
     text-decoration: none;
     color: #fff;
@@ -115,6 +115,7 @@ footer{
     width: 100%;
     position: fixed;
     bottom: 0;
+    background-color: #fff;
 }
 footer>div{
     width: 80%;
